[gd_scene load_steps=2 format=3 uid="uid://cu7jy8xv5xj0b"]

[ext_resource type="Script" path="res://UI/HubMenuUI.gd" id="1_1"]

[node name="HubMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hub Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="MarketButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
text = "Enter Market"

[node name="RecruitmentButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
text = "Recruit Troops"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/OptionsContainer/MarketButton" to="." method="_on_market_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/OptionsContainer/RecruitmentButton" to="." method="_on_recruitment_pressed"]
